fix scrollbar

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,12 @@ html,
 body {
   height: 100%;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: $purple;
+}
